# datura

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/datura/: __init__.py
tests/: test_flatten.py
